added analytics for likes
